kubernetes/production/shelfmark/ingressroute.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shelfmark
  namespace: books
  labels:
    helm.sh/chart: shelfmark-0.1.0
    app.kubernetes.io/name: shelfmark
    app.kubernetes.io/instance: shelfmark
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Kustomize
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "shelfmark.local.biermann.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shelfmark
                port:
                  number: 8084
